add visitor anonymize and identifier redaction
